--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
   ],
   "dependencies": {
     "angular": "~1.x",
-    "jquery-ui": ">= 1.9"
+    "jquery-ui": ">= 1.9",
+    "jquery-simulate": "latest"
   },
   "devDependencies": {
     "angular-mocks": "~1.x"
