--- a/bower.json
+++ b/bower.json
@@ -17,10 +17,10 @@
   ],
   "dependencies": {
     "angular": "~1.2.x",
-    "jquery-ui": ">= 1.9",
-    "jquery-simulate": "latest"
+    "jquery-ui": ">= 1.9"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.x"
+    "angular-mocks": "~1.2.x",
+    "jquery-simulate": "latest"
   }
 }
