--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "karma": "0.10.x",
     "karma-chrome-launcher": "0.1.x",
     "karma-coffee-preprocessor": "0.1.x",
+    "karma-coverage": "~0.1",
     "karma-firefox-launcher": "0.1.x",
     "karma-html2js-preprocessor": "0.1.x",
     "karma-jasmine": "0.1.x",
