chore(grunt): update dependencies

--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
   "main": "./src/sortable.js",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-testacular": "~0.3.0",
-    "grunt-contrib-jshint": "~0.2.0"
+    "grunt": "~0.4.x",
+    "grunt-contrib-jshint": "0.8.x",
+    "grunt-karma": "0.6.x",
+    "karma": "0.10.x",
+    "karma-chrome-launcher": "0.1.x",
+    "karma-coffee-preprocessor": "0.1.x",
+    "karma-firefox-launcher": "0.1.x",
+    "karma-html2js-preprocessor": "0.1.x",
+    "karma-jasmine": "0.1.x",
+    "karma-phantomjs-launcher": "0.1.x",
+    "karma-requirejs": "0.2.x",
+    "karma-script-launcher": "0.1.x",
+    "requirejs": "2.1.x"
   },
   "scripts": {},
   "repository": {
