feat(travis): use angular-ui-publisher

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
+---
 language: node_js
 node_js:
-  - "0.8"
-
+- '0.10'
 before_install:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - npm install -g bower grunt-cli
-  - npm install
-  - bower install
-
-script: "grunt"
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
+- npm install -qg bower grunt-cli
+- npm install -q
+- bower install
+after_success:
+- "./node_modules/angular-ui-publisher/travis/authentication.sh || exit 0"
+- "grunt dist build:gh-pages publish:gh-pages build:bower publish:bower"
+script: grunt
