--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "angular-ui-sortable",
   "version": "0.10.1",
-  "main": "./src/sortable.js",
+  "main": "./sortable.js",
   "dependencies": {
     "angular": "~1.0.x",
     "jquery-ui": ">= 1.9"
