--- a/bower.json
+++ b/bower.json
@@ -16,11 +16,11 @@
     "package.json"
   ],
   "dependencies": {
-    "angular": "~1.0.x",
+    "angular": ">=1",
     "jquery-ui": ">= 1.9"
   },
   "devDependencies": {
-    "angular-mocks": "~1.0.x",
+    "angular-mocks": ">=1",
     "jquery-simulate": "latest"
   }
 }
