Removed globalstrict jshint option in favor of strict.

--- a/.jshintrc
+++ b/.jshintrc
@@ -3,7 +3,7 @@
   "browser": true,
   "eqnull": true,
   "expr": true,
-  "globalstrict": true,
+  "globalstrict": false,
   "immed": true,
   "indent": 2,
   "laxbreak": true,
@@ -14,6 +14,7 @@
   "nonew": true,
   "quotmark": true,
   "smarttabs": true,
+  "strict": true,
   "sub": true,
   "trailing": true,
   "undef": true,
