chore(grunt): use surround
Following #134 and #133
Auto surround the sources

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "angular-ui-publisher": "1.2.x",
     "grunt": "~0.4.x",
     "grunt-contrib-connect": "0.5.x",
+    "grunt-surround": "0.1.x",
     "grunt-contrib-jshint": "0.8.x",
     "grunt-contrib-uglify": "0.2.x",
     "grunt-contrib-watch": "0.5.x",
