--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "grunt-contrib-watch": "0.5.x",
     "grunt-conventional-changelog": "~1.0.0",
     "grunt-karma": "0.6.x",
+    "grunt-karma-coveralls": "2.5.x",
     "grunt-ngmin": "0.0.x",
     "karma": "0.10.x",
     "karma-chrome-launcher": "0.1.x",
