chore(travis): use karma-coveralls for coverage reports

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "karma": "0.10.x",
     "karma-chrome-launcher": "0.1.x",
     "karma-coffee-preprocessor": "0.1.x",
-    "karma-coverage": "~0.1",
+    "karma-coverage": "~0.2.0",
+    "karma-coveralls": "~0.1.4",
     "karma-firefox-launcher": "0.1.x",
     "karma-html2js-preprocessor": "0.1.x",
     "karma-jasmine": "0.1.x",
