--- a/.travis.yml
+++ b/.travis.yml
@@ -37,3 +37,4 @@ env:
   - secure: Cy34UQZ7/9toUKV6905XYeXIaFdDRhLb+ibEbLnjoo3ifeApNaecc1l4aBN88HN6nKnX1TKSZyiETwCpCWCee2d7KTi4IhSFTAa+SVUTV6BmikhdUs6MwemyreyWFlxZD32huZKyWU9ZEAwwQ0Oq9gPqECWWZkdT4LInF6SLWLY=
   - secure: E9gahGC9Swvy83Kos9LhFsxZp/zBI6Ll9lqQd6HxT7YSXj2YeoxSMCsF629bODPdtuMirhmFqReKZKL1lDpJBswr1sFtnmVavSwVBW4v/CIAQu0ENC85Knv1wgoAcl7cRisWaueSHJ0DyNstZZWGNWryIINg9zjFdrOSztDvoN8=
   - secure: UxCvWwq2GcUdL3BtJyRMEFPHPRGIdPPLthThmWrmUE7dnblpDUdWVXKc62f7Y42qtHlhYh1EjxX0GJFcS1F0Lfge0e0cxDNWBATBoLKpC67kTyz/cUgqFEv6tsbkziBtbOrBuy6/LMZly1BqG/3fIDEJezkKOIqHF+pdApvAC/8=
+  - secure: LY+rU4ouy35DfnXdTumu+lPQsMPzNWQktXlms1YG1jWqOs7As223fLQAFe5tyVs34K0xQsPCq3whfaDCd4ZNVYLO3srsXSuRpDw8DRt1fQhhVJo8IBI+Yv92FiFZr54BsBxM4Wzt8hFWEzDlIgziOYSriSXMuBomMHXbtm5vkzg=
