--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.x",
-    "jquery-ui": ">= 1.9"
+    "jquery-ui": ">=1.9 <1.11"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.x",
