--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "angular-ui-sortable",
-  "version": "0.12.11",
+  "version": "0.13.0",
   "main": "./sortable.js",
   "dependencies": {
-    "angular": "~1.2.x",
+    "angular": ">=1.2.x",
     "jquery-ui": ">=1.9"
   }
 }
