--- a/package.json
+++ b/package.json
@@ -1,40 +1,37 @@
 {
   "name": "angular-ui-sortable",
-  "version": "0.13.3",
-  "description": "This directive allows you to jQueryUI Sortable.",
+  "version": "2.0.0-alpha.32",
+  "description": "This directive allows you to sort an array with drag & drop.",
   "author": "https://github.com/angular-ui/ui-sortable/graphs/contributors",
   "license": "MIT",
   "homepage": "http://angular-ui.github.com",
-  "main": "./src/sortable.js",
-  "dependencies": {},
+  "main": "./src/sortable.ts",
+  "dependencies": {
+    "angular2": "2.0.0-alpha.32",
+    "es6-module-loader": "0.16.5",
+    "gulp-typescript": "^2.7.8",
+    "reflect-metadata": "^0.1.0",
+    "systemjs": "0.16.7",
+    "typescript": "1.5.x"
+  },
   "devDependencies": {
-    "angular-ui-publisher": "1.2.x",
-    "grunt": "~0.4.x",
-    "grunt-contrib-connect": "0.5.x",
-    "grunt-contrib-jshint": "0.8.x",
-    "grunt-contrib-uglify": "0.2.x",
-    "grunt-contrib-watch": "0.5.x",
-    "grunt-conventional-changelog": "~1.0.0",
-    "grunt-karma": "0.6.x",
-    "grunt-ngmin": "0.0.x",
-    "grunt-surround": "0.1.x",
-    "karma": "0.10.x",
-    "karma-chrome-launcher": "0.1.x",
-    "karma-coffee-preprocessor": "0.1.x",
-    "karma-coverage": "~0.2.0",
-    "karma-coveralls": "~0.1.4",
-    "karma-firefox-launcher": "0.1.x",
-    "karma-html2js-preprocessor": "0.1.x",
-    "karma-jasmine": "0.1.x",
-    "karma-junit-reporter": "0.2.x",
-    "karma-phantomjs-launcher": "0.1.x",
-    "karma-requirejs": "0.2.x",
-    "karma-script-launcher": "0.1.x",
-    "load-grunt-tasks": "0.2.x",
-    "requirejs": "2.1.x",
+    "connect": "^3.3.4",
+    "del": "~1.1.1",
+    "gulp": "~3.8.10",
+    "gulp-plumber": "^1.0.0",
+    "gulp-rename": "~1.2.0",
+    "gulp-size": "^1.2.1",
+    "gulp-traceur": "0.17.*",
+    "open": "0.0.5",
+    "serve-static": "~1.8.1",
+    "systemjs-builder": "^0.10.3",
+    "through2": "~0.6.3",
     "wiredep": "1.8.x"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp play"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/angular-ui/ui-sortable.git"
