--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   ],
   "dependencies": {
     "angular": ">=1.2.x",
+    "jquery": "<3.0.0",
     "jquery-ui": ">=1.9"
   },
   "devDependencies": {
