Travis commit : build 462

--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "main": ["./sortable.js"],
   "dependencies": {
     "angular": ">=1.2.x",
+    "jquery": "<3.0.0",
     "jquery-ui": ">=1.9"
   }
 }
