--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - '6'
 addons:
-  firefox: "latest"
+  firefox: "54.0.1"
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
